# darkplotter

./: LICENSE  MANIFEST.in  README.md  classes potential.py  main_plot.py  main_plot2.py  module_2.py  new.ipynb  plotter.ipynb  plotting.ipynb  potential.ipynb  potentials.ipynb  potentials.py  pyproject.toml  requirements.txt  setup.py  testing.ipynb  testing2.ipynb  testtt.ipynb
.github/workflows/: tests.yml
Test/: test.ipynb  test.py
darkplotter/: DarkPlotter.py  potentials.py
docs/: Example_Tutorial.txt
legacy_scripts/: plotter_legacy.py
src/: potentials.py  top_level.txt
src/DarkPlotter.egg-info/: SOURCES.txt
src/our_package_name.egg-info/: DarkPlotter.py  MW_Vc.txt  PKG-INFO  requires.txt
src/package_name/: __init__.py  _example.py
tests/: example_test.py
