# In latest versions of Python, it is recommended to use TOML file to declare which build backend you use and to specify your project’s basic metadata, such as the dependencies, your name, etc. More info: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[build-system]
requires = [
     'setuptools>=65.5.1',
     "wheel"
]
build-backend = 'setuptools.build_meta'

[project]
name = "darkplotter"
version = "1.0.0"  # Version of the package, if any
authors = [  # List of authors of the project and emails
  {name = "Garcia-Cifuentes, K.", email = "stivengarcia7113@gmail.com"},
  {name = "Bretton Simpson", email = "bsimpson@ucsd.com"},
  {name = "Elizabeth", email = "Elizabeth@example.com"},
  {name = "Alcatraz", email = "Alcatraz@example.com"},
  {name = "Dionysis", email = "Dionysis@example.com"},
]
maintainers = [
  {name = "Keneth Garcia", email = "stivengarcia7113@gmail.com"}
  {name = "Bretton Simpson", email = "bsimpson@ucsd.edu"}
]
keywords = [  # Keywords related to the package, add everyone that you consider pertinent
   "Galactic Dynamics", "Rotation Curves", "Plummer Model", "Galaxies", "Extragalactic Astronomy"
]
description = "This package is an educational tool to teach undergradute students in astronomy about the gravitational potential and corresponding velocity curve as a function of radius for the Milky Way galaxy. After using this tool, students should understand that some form of dark matter must exist in order to explain the obsered velocity curve of the Milky Way.
readme = {file = "README.md", content-type = "text/markdown"}  # Metadata of the README file
requires-python = ">=3.8"  # Python requirement version
license = {file = "LICENSE", name = "MIT License"}  # License name
classifiers = [  # A list of special keywords to describe the package, its public and in what system can be executed. A complete list of classifiers can be found here: https://pypi.org/classifiers/
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10.x",
    "Programming Language :: Python :: 3.11.x",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux"
]
dependencies = [   # List all the dependencies related to the package, sintax: "package_name>=version"
    "matplotlib>=3.7.1",
    "numpy>=1.24.2",
    "pandas>=2.0.0",
    "scipy>=1.10.1",
]

[project.urls]   # List of all the project URLs related to the package, change urls if necessary based on the branch
homepage = "https://github.com/brettonsimpson/group-13"
documentation = "https://github.com/brettonsimpson/group-13/tree/Keneth_updates/docs"

[tool.setuptools.package-data]  # List of all package data file required to use package_name, such as tables. Remove it if necessary
summary_tables = ["*"]

[tool.setuptools.packages.find]  # Path where the code is saved, in this case is into the src folder
where = ["src"]
