[build-system]
requires = [
     'setuptools>=65.5.1',
     "wheel"
]
build-backend = 'setuptools.build_meta'

[project]
name = "darkplotter"
version = "1.0.0"  # Version of the package, if any
authors = [
  {name = "Garcia-Cifuentes, K.", email = "stivengarcia7113@gmail.com"},
  {name = "Bretton Simpson", email = "bsimpson@ucsd.edu"},
  {name = "Elizabeth Moreno", email = "Elizabeth@example.com"},
  {name = "Vyom Singh Rathore", email = "rathorevyom04@gmail.com"},
  {name = "Dionysis Gakis", email = "dgakis5@gmail.com"},
]
maintainers = [
  {name = "Keneth Garcia", email = "stivengarcia7113@gmail.com"},
  {name = "Bretton Simpson", email = "bsimpson@ucsd.edu"}
  {name = "Vyom Singh Rathore", email = "rathorevyom04@gmail.com"},
  {name = "Dionysis Gakis", email = "dgakis5@gmail.com"},
  {name = "Elizabeth Moreno", email = "Elizabeth@example.com"}
]
keywords = [
   "Galactic Dynamics", "Rotation Curves", "Plummer Model", "Galaxies", "Extragalactic Astronomy"
]
description = "This package is an educational tool to teach undergradute students in astronomy about the gravitational potential and corresponding velocity curve as a function of radius for the Milky Way galaxy. After using this tool, students should understand that some form of dark matter must exist in order to explain the obsered velocity curve of the Milky Way."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {file = "LICENSE", name = "MIT License"}
classifiers = [  # A list of special keywords to describe the package, its public and in what system can be executed. A complete list of classifiers can be found here: https://pypi.org/classifiers/
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
    "matplotlib>=3.7.1",
    "numpy>=1.24.2",
    "pandas>=2.0.0",
    "scipy>=1.10.1",
    "astropy>=6.1.1"
]

[project.urls]   # List of all the project URLs related to the package, change urls if necessary based on the branch
homepage = "https://github.com/brettonsimpson/darkplotter"
documentation = "https://github.com/brettonsimpson/darkplotter"

[tool.setuptools.package-data]
summary_tables = ["*"]

[tool.setuptools.packages.find]
where = ["src"]
